--- a/requirements.txt
+++ b/requirements.txt
@@ -1,89 +1,14 @@
-apt-xapian-index==0.49
 asgiref==3.3.4
-attrs==19.3.0
-Automat==0.8.0
 beautifulsoup4==4.9.3
-blinker==1.4
-certifi==2019.11.28
-chardet==3.0.4
-Click==7.0
-colorama==0.4.3
-command-not-found==0.3
-constantly==15.1.0
-cryptography==2.8
-cupshelpers==1.0
-dbus-python==1.2.16
-deluge==2.0.3
-distro==1.4.0
-distro-info===0.23ubuntu1
 Django==3.2.3
 django-ajax-selects==2.1.0
 django-bootstrap-form==3.4
 django-bootstrap-v5==1.0.4
 django-currentuser==0.5.3
 django-filter==2.4.0
-entrypoints==0.3
-GeoIP==1.3.2
-gpg===1.13.1-unknown
-httplib2==0.14.0
-hyperlink==19.0.0
-idna==2.8
+fontawesome-free==5.15.4
 importlib-metadata==3.10.1
-incremental==16.10.1
-keyring==18.0.1
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-libvirt-python==6.1.0
-Mako==1.1.0
-MarkupSafe==1.1.0
-netifaces==0.10.4
-numpy==1.17.4
-oauthlib==3.1.0
-olefile==0.46
-pexpect==4.6.0
-Pillow==7.0.0
-pyasn1==0.4.2
-pyasn1-modules==0.2.1
-pycairo==1.16.2
-pycrypto==2.6.1
-pycups==1.9.73
-pygame==1.9.6
-PyGObject==3.36.0
-PyHamcrest==1.9.0
-PyJWT==1.7.1
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyOpenSSL==19.0.0
-PyQt5==5.14.1
-python-apt==2.0.0+ubuntu0.20.4.6
-python-debian===0.1.36ubuntu1
 pytz==2021.1
-pyxdg==0.26
-PyYAML==5.3.1
-rencode==1.0.6
-reportlab==3.5.34
-requests==2.22.0
-requests-unixsocket==0.2.0
-SecretStorage==2.3.1
-service-identity==18.1.0
-setproctitle==1.1.10
-simplejson==3.16.0
-sip==4.19.21
-six==1.14.0
 soupsieve==2.2.1
-speedtest-cli==2.1.2
 sqlparse==0.4.1
-systemd-python==234
-Twisted==18.9.0
-ubuntu-advantage-tools==27.4
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
-urllib3==1.25.8
-usb-creator==0.3.7
-wadllib==1.3.3
-xkit==0.0.0
 zipp==3.4.1
-zope.interface==4.7.1
